ADAPT-1345: Accordion tweaks and fixes (#124)
* Allow heading level selection of accordion main heading; font size tweaks; add +/- sign on expand/collapse button as pseudo elements so SR doesn't read it out
* Fix the overlapping accordion item title with the icon on the right
* Use Heading component for acc item
* Set item title back to bold instead of semibold

--- a/src/scss/page-types/_interior-page.scss
+++ b/src/scss/page-types/_interior-page.scss
@@ -43,10 +43,15 @@
       @include responsive-spacing('padding', null null 5);
 
       &-title {
-        @include modular-typography(2);
         @include margin(null null 0);
+        letter-spacing: 0;
+        font-size: 3rem;
 
         @include grid-media('md') {
+          @include modular-typography(3);
+        }
+
+        @include grid-media('lg') {
           @include modular-typography(4);
         }
       }
